# FiveGuys-cs490-project-summer-2025

./: .gitignore  README.md  STEP3_INTEGRATION_STATUS.md  package-lock.json  package.json  pyproject.toml  test_integration.sh
J*b_ad_Tests/: sample1.txt  sample10.txt  sample2.txt  sample3.txt  sample4.txt  sample5.txt  sample6.txt  sample7.txt  sample8.txt  sample9.txt
Sprint 2 Test/First/: Resume.txt  job_ad.txt
Sprint 2 Test/Second/: Resume.txt
Sprint 2 Test/Third/: job_ad.text
back_end/: app.py  db.py  job_scraper.py  latex_compiler.py
back_end/latex_templates/: base_template.tex  classic.py  creative.py  default.py  modern.py  two_column_template.tex
back_end/parser/: parser.py
back_end/routes/: advice.py  auth_utils.py  completed_resumes.py  firebase_admin_init.py  format.py  job_ads.py  resume.py  resume_render.py  templates.py  upload.py
src/app/: layout.tsx  page.tsx
src/app/home/: page.tsx
src/app/home/completed/: page.tsx
src/app/home/completed_forms/: page.tsx
src/app/home/completed_resumes/: page.tsx
src/app/home/completed_resumes/[completedResumeId]/: page.tsx
src/app/home/database/: page.tsx
src/app/home/drafts/: page.tsx
src/app/home/job_ads/: page.tsx
src/app/home/job_posting/: page.tsx
src/app/home/resumes/: page.tsx
src/app/home/settings/: page.tsx
src/components/: CacheCleanup.tsx  sidePanel.tsx  topBanner.tsx
src/components/forms/: FileUploadForm.tsx  ResumeInfo.tsx
src/context/: themeContext.tsx
src/lib/: resumeCache.ts
src/styles/: globals.css  sidePanel.module.css
(+3 files in other folders)
