[tool.poetry]
name = "fiveguys-cs490-project-summer-2025"
version = "0.1.0"
description = ""
authors = ["Lior <ultron895@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.1"
firebase-admin = "^6.9.0"
python-dotenv = "^1.1.0"
flask-cors = "^6.0.0"
google-cloud-storage = "^3.1.0"
pymongo = {extras = ["srv"], version = "^4.13.0"}
pdfplumber = "^0.11.7"
pdfminer-six = "^20250506"
docx2txt = "^0.9"
odfpy = "^1.4.1"
openai = "^1.86.0"
beautifulsoup4 = "^4.12.0"
requests = "^2.31.0"
lxml = "^4.9.0"
playwright = "^1.40.0"
reportlab = "^4.4.2"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
